--- a/frontend/static/themes/rainbow_trail.css
+++ b/frontend/static/themes/rainbow_trail.css
@@ -29,6 +29,12 @@ header #logo .text {
   animation: rainbow-gradient 30s alternate ease-in-out infinite;
   padding-bottom: 0.1em;
 }
+header #logo .icon {
+  padding-bottom: 0.05em;
+}
+nav {
+  padding-bottom: 0.2em;
+}
 
 header #logo .top,
 .view-account .levelAndBar .level,
