--- a/frontend/static/themes/sewing_tin_light.css
+++ b/frontend/static/themes/sewing_tin_light.css
@@ -36,6 +36,12 @@ header #logo .text {
   -webkit-text-fill-color: transparent;
   padding-bottom: 0.1em;
 }
+header #logo .icon {
+  padding-bottom: 0.05em;
+}
+nav {
+  padding-bottom: 0.2em;
+}
 
 header #logo .text .top {
   /* prevent it from being transparent */
