--- a/frontend/static/themes/suisei.css
+++ b/frontend/static/themes/suisei.css
@@ -30,6 +30,9 @@ header #logo .text {
   color: transparent;
   padding-bottom: 0.1em;
 }
+header #logo .icon {
+  padding-bottom: 0.05em;
+}
 header #logo .text .top {
   color: var(--main-color);
 }
